# Artelie-BackEnd

./: README.md  artelie.json  artelie_bkp.json  artelie_clean.json  pyproject.toml  requirements.txt
artelie/: admin.py  apps.py  auth_views.py  pagination.py  permissions.py
artelie/migrations/: 0001_initial.py  0002_alter_user_password.py  0002_product_image.py  0002_product_imagem.py  0003_address_user_address_supplier.py  0003_user_profile_image.py  0004_cart_order_product_orderitem_cartitem_review_and_more.py  0004_rename_imagem_product_image.py  0005_brand_image.py  0005_remove_product_artelie_pro_categor_3c651f_idx_and_more.py  0006_alter_user_options_user_failed_login_attempts_and_more.py
artelie/models/: __init__.py  address.py  brand.py  cart.py  category.py  order.py  product.py  review.py  supplier.py  user.py
artelie/serializers/: __init__.py  address.py  auth.py  brand.py  cart.py  category.py  order.py  product.py  register.py  review.py  supplier.py  token.py  user.py
artelie/views/: __init__.py  address.py  brand.py  cart.py  category.py  email_verification.py  order.py  product.py  profile.py  register.py  review.py  supplier.py  user.py
config/: settings.py  urls.py
uploader/serializers/: image.py
